Can now be built with and for Java 8
Use the maven profile j8-build

For example: mvn clean install -P!default,j8-build